# ProgettoSO

./: .gitignore  CMakeLists.txt  Makefile  ack.c  ack.h  board.c  board.h  client.c  dev.c  dev.h  err_exit.c  err_exit.h  list.h  msg.c  msg.h  server.c  settings.h  shared_memory.c  shared_memory.h  steps.c  steps.h
input/: file_posizioni.txt
